Fixes #7235: Make all charger rotations a POI for villagers instead of just the north-rotation.